--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.20.0",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -18,6 +19,7 @@
     "eject": "react-scripts-ts-antd eject"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.12",
     "@types/react": "^16.8.23",
