--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^7.1.1",
     "antd": "^3.20.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts-ts-antd": "2.17.0"
+    "react-scripts-ts-antd": "2.17.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts-antd start",
