--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/lodash": "^4.14.135",
     "@types/react-redux": "^7.1.1",
     "antd": "^3.20.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "date-fns": "^1.30.1",
     "history": "^4.9.0",
+    "loadsh": "^0.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
