--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "potato-web",
+  "homepage": "http://myname.github.io/potato-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
+    "gh-pages": "^2.0.1",
     "history": "^4.9.0",
     "loadsh": "^0.0.4",
     "react": "^16.8.6",
@@ -20,6 +22,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts-ts-antd start",
     "build": "react-scripts-ts-antd build",
     "test": "react-scripts-ts-antd test --env=jsdom",
