--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
+    "echarts": "^4.2.1",
+    "echarts-for-react": "^2.0.15-beta.0",
     "gh-pages": "^2.0.1",
     "history": "^4.9.0",
     "loadsh": "^0.0.4",
